test/compilable/imports/lib19724a.d
module lib19724a;

import lib19724b;

int first(int x) { return lib19724b.second(x); }
