test/fail_compilation/fail240.d
class F { int x; }
alias typeof(typeof(F).x) b;
